test/parsetest/valid/int-literals-are-expressions.java
class Some {
  public static void main(String[] args) {
    {
       4;
    }
  }
}


