test/parsetest/invalid/invalid_use_of_this4.java
class this {
  public static void main(String[] a) {

  }
}